tentative correction bug overflow mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,8 @@ body {
   padding: 0px;
   margin: 0px; }
 
-body {
+body, html {
+  position: relative;
   overflow-x: hidden;
   width: 100%;
   height: 100%; }
@@ -159,7 +160,8 @@ nav {
   margin-bottom: -80px;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
 
 #header-container {
   display: flex;
