--- a/public/scss/_global.scss
+++ b/public/scss/_global.scss
@@ -6,7 +6,8 @@ body {
     margin: 0px;
 }
 
-body {
+body, html {
+    position: relative;
     overflow-x: hidden;
     width: 100%;
     height: 100%;
