--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 #header-container {
